# nix-flake-workflow

./: Cargo.toml  README.md  flake.nix  template.yml
.github/workflows/: flake-fast.yml  flake.yml  reusable-flake-workflow-fast.yml  reusable-flake-workflow.yml
nix/: package.nix
nix/lib/: default.nix
src/: discover.nix  main.rs
