[package]
name = "nix-flake-workflow"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
